<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>roswork</name>
  <version>0.0.0</version>
  <description>The roswork package</description>
  
  <maintainer email="19C1088AB@s.chibakoudai.jp">himiz815</maintainer>
  
  <license>GNU</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export></export>
</package>
